# dashtool

./: Cargo.toml  Documentation.md  README.md
.github/workflows/: release.yml  rust.yml
argo-workflow/: Cargo.toml
argo-workflow/src/: schema.rs
dashtool/: Cargo.toml
dashtool-common/: Cargo.toml
dashtool-common/src/: lib.rs
dashtool/src/: error.rs  git.rs  lib.rs  main.rs  sql.rs  test.rs
dashtool/src/config/: mod.rs
dashtool/src/dag/: identifier.rs  mod.rs
dashtool/src/init/: mod.rs
dashtool/src/plugins/: mod.rs
dashtool/src/plugins/dashbook/: mod.rs  openid.rs
dashtool/src/plugins/file/: mod.rs
dashtool/src/plugins/sql/: mod.rs
dashtool/src/rebuild/: mod.rs
dashtool/src/run/: mod.rs  openid.rs  sql.rs
dashtool/src/state/: mod.rs
dashtool/src/workflow/: mod.rs  template.rs
kubernetes/authentication/: job-authentication.yaml  main.ts
kubernetes/authorization/: job-authorization.yaml  main.ts
