[package]
name = "argo-workflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.12.0"
serde = { workspace = true }
serde_json = { workspace = true }
