[package]
name = "argo-workflow"
version = "0.1.0"
edition = "2021"

description = "Argo Workflow Models"

license = "Apache-2.0"

repository = "https://github.com/dashbook/dashtool"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_builder = "0.12.0"
serde = { workspace = true }
serde_json = { workspace = true }
