[package]
name = "dashtool"
version = "0.4.0"
edition = "2021"

description = "Lakehouse build tool"

license = "Apache-2.0"

repository = "https://github.com/dashbook/dashtool"

[dependencies]
argo-workflow = "0.1"
clap = { version = "=4.4", features = ["derive"] }
dashtool-common = { version = "0.2.0", path = "../dashtool-common/" }
datafusion-iceberg-sql = "0.9.0"
datafusion-sql = "50.0.0"
datafusion-common = "50.0.0"
iceberg-rust = "0.9.0"
iceberg-rest-catalog = "0.9.0"
iceberg-sql-catalog = "0.9.0"
iceberg-file-catalog = "0.9.0"
iceberg-glue-catalog = "0.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { version = "0.58", features = ["visitor"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "mysql"], default-features = false }
object_store = "0.12"
openidconnect = "3.3"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3.30"
thiserror = "1"
reqwest = { version = "0.12" }
url = "2.4"
anyhow = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
arrow-schema = "56.2.0"
serde_yaml = "0.9.25"
async-trait = "0.1"
derive-getters = "0.3.0"
k8s-openapi = { version = "0.20.0", features = ["v1_24"] }
shellexpand = "3.1.0"
gix = { version = "0.58.0", features = ["serde","verbose-object-parsing-errors"] }
itertools = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = { version = "5.0.1" }

[target.'cfg(target_os = "macos")'.dependencies]
getrandom = "=0.2.10"

[dev-dependencies]
tempfile = "3.8.1"

